--- a/src/components/PostList/PostList.scss
+++ b/src/components/PostList/PostList.scss
@@ -1,3 +1,18 @@
 .post-container {
     margin: 0 auto;
 }
+
+.post-enter {
+    transform: translateX(-350px);
+}
+.post-enter-active {
+  transform: translateX(0);
+  transition: transform 500ms ease-in;
+}
+.post-exit {
+  opacity: 1;
+}
+.post-exit-active {
+  transform: translateX(-350px);
+  transition: transform 500ms ease-in;
+}
