--- a/src/components/PostList/PostList.scss
+++ b/src/components/PostList/PostList.scss
@@ -7,12 +7,14 @@
 }
 .post-enter-active {
   transform: translateX(0);
-  transition: transform 500ms ease-in;
+  transition: transform 200ms ease-in, opacity 200ms ease-in;
+  opacity: 0;
 }
 .post-exit {
   opacity: 1;
 }
 .post-exit-active {
   transform: translateX(-350px);
-  transition: transform 500ms ease-in;
+  transition: transform 200ms ease-in, opacity 200ms ease-in;
+  opacity: 0;
 }
