added some minor fixes

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 20px;
-  background-color: rgb(111, 186, 111);
+  background-color: rgba(174, 254, 254, 0.672);
 
   a {
     text-decoration: none;
