--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,4 @@
 .main-panel {
-  display: flex;
-  justify-content: flex-end;
-  padding: 20px;
   background-color: rgba(174, 254, 254, 0.672);
 
   a {
@@ -12,4 +9,12 @@
   a + a {
     margin-left: 30px;
   }
+}
+
+.nav-container {
+  margin: 0 auto;
+  width: 800px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
 }
