--- a/src/components/PostList/PostItem/PostItem.scss
+++ b/src/components/PostList/PostItem/PostItem.scss
@@ -5,3 +5,9 @@
     padding: 10px;
     margin: 20px 0;
 }
+
+.post-btns-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
