--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,11 @@
 .main-panel {
   background-color: rgba(174, 254, 254, 0.672);
+  display: flex;
+  align-items: center;
+
+  button {
+    word-wrap: normal;
+  }
 
   a {
     text-decoration: none;
